# molecular-autoencoder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/formulas/: bce-loss.tex  descriptor-loss.tex  latent-space.tex  latent-zi-noisy.tex  latent-zi.tex  latent-zj.tex  latent-zk.tex  ranking-gap.tex  ranking-hinge.tex  reconstruction-loss.tex  tanimoto-logistic.tex  tanimoto-score.tex  tanimoto-softmax.tex  total-loss.tex  training-objectives-caption.tex
examples/: train_cached_shards.rs
src/: batch.rs  data.rs  encoder.rs  error.rs  features.rs  fingerprints.rs  lib.rs  metrics.rs  model.rs  ranking.rs  training.rs
src/embed/: mod.rs  record.rs
src/embed/sink/: jsonl.rs  mod.rs  parquet.rs  stdout.rs  tsv.rs
src/embed/source/: delimited.rs  mgf.rs  mod.rs  smi.rs  stdin.rs
src/tanimoto_cuda/: api.rs  autodiff.rs  cube_backend.rs  fusion.rs  kernels.rs  mod.rs  tests.rs
tests/: embed_pipeline.rs  preprocessing_pipeline.rs
